# AI-Agent-Flow

./: .env.example  .gitignore  README.md  agent_flow.db  agent_flow.py.bak  agent_manager.py  cli.py  data_manager.py  llm_interface.py  main.py  mcp_manager.py  pyproject.toml  requirement.md  requirement_20250731.md  requirements.txt  setup.py
agent/: executor.py  manager.py
ai_agent_flow/agent/: agent_manager.py
ai_agent_flow/cli/: cli.py
ai_agent_flow/config/: config.json  config.py
ai_agent_flow/data/: database.py
ai_agent_flow/doc/: detailed_design.md
ai_agent_flow/llm/: llm_interface.py
ai_agent_flow/mcp/: mcp_manager.py  mcp_server.py
cli/: interface.py
data/: database.py
doc/: ARCHITECTURE.md  agent_design.md  architecture.md  architecture_diagram.mmd  cli_design.md  code_quality_report.md  data_design.md  design_doc.md  design_doc.md.1  design_doc.md.2  design_document.md  document_checklist.md  li_task.md  llm_design.md  mcp_design.md  taskfile_integration.md  uml.md  uml_diagram.mmd
doc/api/: api_reference.md
doc/design/: DESIGN_Agent.md  DESIGN_MCP.md  DESIGN_RAG.md  DESIGN_agent_flow.md  DESIGN_cli.md  (+6 more)
llm/: client.py
mcp/: service.py
prototype/: README.md  dashboard.html  login.html  model_interaction.html  register.html  styles.css
sample/: mcp_client_for_llm.py  rag.py
sample/ai_engineering_loop/: README.md  pyproject.toml
sample/ai_engineering_loop/src/ai_engineering_loop/: crew.py  main.py
src/: __init__.py  main.py
tests/: run_tests.py  test_agent.py  test_cli.py  test_database.py  test_llm.py  test_mcp.py
(+69 files in other folders)
