[project]
name = "ai_engineering_loop"
version = "0.1.0"
description = "ai_engineering_loop using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
ai_engineering_loop = "ai_engineering_loop.main:run"
run_crew = "ai_engineering_loop.main:run"
train = "ai_engineering_loop.main:train"
replay = "ai_engineering_loop.main:replay"
test = "ai_engineering_loop.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
